--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -19,7 +19,8 @@
             </header>
 
             <div class="entry-content clearfix">
-                <p>{{ post.excerpt }}</p>
+                <!-- 显示摘要 -->
+                <p>{{ post.excerpt }}...</p>
                 <div class="read-more cl-effect-14">
                     <a href="{{ post.get_absolute_url }}" class="more-link">继续阅读 <span class="meta-nav">→</span></a>
                 </div>
